# game-dev

./: .gitignore  README.md
a-star-path-finding/: PathFinding.sln
a-star-path-finding/PathFinding/: PathFinding.vcxproj  PathFinding.vcxproj.filters
a-star-path-finding/PathFinding/Include/: Astar.h  CompareNode.h  Node.h  PriorityQueue.h
blender-models/laura-croft/: laura-croft-after-mirror.blend  laura-croft.blend
commander-penguin-brancing-out/: BoardManager.cs  GameManager.cs  IMessageTarget.cs  Loader.cs  MovingObject.cs  Player.cs
commander-penguin-brancing-out/code/: switchToPlaySpace.cs
game-of-life/: GoL.sln
game-of-life/GoL/: GoL.vcxproj  GoL.vcxproj.filters
ray-tracer/ray-tracer/: ray-tracer.sln
tearsplash-engine/graphics/: CMakeLists.txt  MainGame.cpp  MainGame.h  graphics.sln  graphics.vcxproj  graphics.vcxproj.filters  main.cpp
tearsplash-engine/graphics/tearsplash/: CMakeLists.txt  Readme.txt  tearsplash.vcxproj  tearsplash.vcxproj.filters
tearsplash-engine/graphics/tearsplash/dependencies/includes/: Errors.h  IOManager.h  ResourceManager.h  ShaderProgram.h  Sprite.h  TextureCache.h  Vertex.h
tearsplash-engine/graphics/tearsplash/dependencies/includes/Tearsplash/: AudioEngine.h  Box.h  Camera2D.h  Errors.h  GLTexture.h  IOManager.h  ImageLoader.h  InputManager.h  Particle2D.h  ParticleBatch2D.h  ParticleEngine2D.h  PicoPNG.h  ResourceManager.h  ShaderProgram.h  Sprite.h  Spritebatch.h  Spritefont.h  Tearsplash.h  TextureCache.h  TileSheet.h  Timing.h  Vertex.h  Window.h
tearsplash-engine/graphics/tearsplash/dependencies/libs/x86/: freetype.lib
tearsplash-engine/graphics/tearsplash/dependencies/libs/x86/Debug/: SDL2d.lib  SDL2maind.lib  box2d.lib
tearsplash-engine/graphics/tearsplash/dependencies/libs/x86/Release/: SDL2.lib  SDL2main.lib  box2d.lib
tearsplash-engine/graphics/tearsplash/shaders/: 2DText.frag  2DText.vert
tearsplash-engine/graphics/tearsplash/src/: AudioEngine.cpp  Box.cpp  Camera2D.cpp  Errors.cpp  IOManager.cpp  ImageLoader.cpp  InputManager.cpp  Particle2D.cpp  ParticleBatch2D.cpp  ParticleEngine2D.cpp  PicoPNG.cpp  ResourceManager.cpp  ShaderProgram.cpp  Sprite.cpp  Spritebatch.cpp  Spritefont.cpp  Tearsplash.cpp  TextureCache.cpp  Timing.cpp  Window.cpp  imgui_impl_sdl.cpp
tutorials/: README.md
tutorials/blender-donut/: donut.blend  flame-monkey.blend
tutorials/blender-donut-3.0/: donut-3.0.blend
tutorials/ray-tracer/: README.md
(+72 files in other folders)
